--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "dependencies": {
+    "big.js": "^3.2.0",
     "localforage": "^1.5.0",
     "lodash": "^4.17.4",
     "material-ui": "^0.19.2",
@@ -12,7 +13,6 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
-    "redux-logger": "^2.7.0",
     "redux-thunk": "^2.1.0",
     "uuid": "^3.1.0"
   },
