--- a/manifest.pwa.json
+++ b/manifest.pwa.json
@@ -22,7 +22,7 @@
       "sizes": "256x256",
       "type": "image/png"
     }],
-  "start_url": "/index.html",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#00bcd4",
   "theme_color": "#d4be00"
