--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "^15.2.0",
     "react-dom": "^15.2.0",
     "react-redux": "^4.4.5",
-    "react-router": "^2.8.1",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.6.0",
     "uuid": "^3.1.0"
   },
